@@ -71,6 +71,13 @@ public:
 
 	//! get the archive type
 	virtual E_FILE_ARCHIVE_TYPE getType() const { return EFAT_UNKNOWN; }
+
+	//! An optionally used password string
+	/** This variable is publicly accessible from the interface in order to
+	avoid single access patterns to this place, and hence allow some more
+	obscurity.
+	*/
+	core::stringc Password;
 };
 
 //! Class which is able to create an archive from a file.
